# hiweb

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  notes
Cryptography/: CMakeLists.txt
Cryptography/asm/: Functions.asm
Cryptography/solutions/: sha256.py
Cryptography/src/: main.cpp
Cryptography/tests/: test.cpp
DOMinator/: CMakeLists.txt  used resources.txt
DOMinator/analysis/most common tags/: common_tags.txt  main.py  other_tags.txt  resources.txt
DOMinator/include/dominator/html5/: Tag.h
DOMinator/include/dominator/internal/html5/: Element.h  Regenerator.h  TagList.h
DOMinator/src/: Tag.cpp  main.cpp
DOMinator/src/internal/: Element.cpp
MarkupParser/: CMakeLists.txt
MarkupParser/include/: html.hpp
MarkupParser/src/: html.cpp  main.cpp
NativeScript/src/: Parser.cpp
TypeNative/: CMakeLists.txt  LICENSE
TypeNative/include/: AST.h  CodeGen.h  Lexer.h  Parser.h  Semantic.h
TypeNative/src/: Calc.cpp  CodeGen.cpp  Lexer.cpp  Parser.cpp  Semantic.cpp  rtcalc.c
hi.crypto/asm/linux/: sha256linux.asm
hi.crypto/include/: SHA256.h
hi.crypto/solutions/: SHA256.h  main.cpp
hi.parser/: CMakeLists.txt
hi.parser/include/: CSS.h
hi.parser/include/hi.parser/: bidirectional_map.h  html5.h
hi.parser/src/: bidirectional_map.cpp  html5.cpp  main.cpp
hi.script/src/: CMakeLists.txt  CodeGen.cpp
include/hiweb/: CryptoAlgorithm.h  SHA2.h  document.h  dom.h  web.h
include/hiweb/parser/: base.h  document.h  markup_types.h
include/hiweb/parser/html/: html.h
include/hiweb/parser/xhtml/: xhtml.h
include/hiweb/parser/xml/: xml.h
src/: CryptoAlgorithm.cpp  SHA2.cpp  dom.cpp  main.cpp  test.cpp  web.cpp
src/parser/: base.cpp
src/parser/html/: html.cpp
src/parser/xhtml/: xhtml.cpp
src/parser/xml/: xml.cpp
